examples/negative/doc/doc_bare_flag.kai
# Negative fixture (#681): bare-flag form `#[doc(hidden)]`. Phase 1
# accepts only the string-argument forms; `hidden`, `alias = "..."`,
# and `since = "..."` land with Phase 3.

#[doc(hidden)]
pub fn f() : Int = 1

fn main() : Int = f()
